# SCML-examples

scml-2.1.3/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  RELEASENOTES  configure  configure.in
scml-2.1.3/config/: LICENSE  Makefile  NEWS  compile  config.status  depcomp
scml-2.1.3/config/examples/: Makefile
scml-2.1.3/config/examples/HWaccelerator/: Makefile
scml-2.1.3/config/examples/Memory/: Makefile
scml-2.1.3/config/examples/cache/: Makefile
scml-2.1.3/config/examples/scml2/: Makefile
scml-2.1.3/config/examples/simple_IPE/: Makefile
scml-2.1.3/config/examples/simple_timer/: Makefile
scml-2.1.3/config/include/: scml2.h  scml2_logging.h  scml2_testing.h
scml-2.1.3/config/include/PV/: PV.h  PVDataTypes.h  PVProtocolReq.h  PVProtocolResp.h
scml-2.1.3/config/include/scml2/: bitfield.h  bitfield_callback_base.h  bitfield_callback_functions_include.h  bitfield_callback_observer.h  bitfield_callback_observer_owner.h  bitfield_debug_callback_base.h  bitfield_debug_mask_read_adapter.h  bitfield_debug_mask_write_adapter.h  bitfield_debug_mask_write_adapter_tagged.h  bitfield_debug_read_adapter.h  bitfield_debug_read_adapter_tagged.h  bitfield_debug_read_callback.h  bitfield_debug_write_adapter.h  bitfield_debug_write_callback.h  bitfield_default_read_behavior_adapter.h  bitfield_default_write_behavior_adapter.h  bitfield_disallow_debug_read_access_callback.h  bitfield_disallow_debug_write_access_callback.h  bitfield_mask_read_adapter.h  bitfield_mask_read_adapter_tagged.h  bitfield_neversync_write_callback.h  bitfield_post_write_adapter_tagged.h  bitfield_untimed_mask_read_adapter.h  bitfield_untimed_mask_read_adapter_tagged.h  bitfield_untimed_mask_write_adapter_tagged.h  bitfield_untimed_read_adapter.h  bitfield_write_callback.h  bitfield_write_once_adapter.h  callback_macro.h  callback_observer_owner.h  debug_burst_unroller.h  dmi_handler.h  initiator_socket.h  mapped_ranges_observer.h  mapped_ranges_observer_owner.h  memory_base.h  memory_behavior_functions.h  memory_callback_base.h  memory_callback_functions.h  memory_content_observer_owner.h  (+51 more)
scml-2.1.3/config/include/scml2_logging/: name_prefix_match.h  or_match.h  severity_name_match.h  stream_logger.h
scml-2.1.3/config/include/scml2_testing/: assertion_macros.h  initiator_socket_proxy.h  initiator_socket_proxy_base.h  input_output_pin_proxy.h  memory_element_value_proxy.h  memory_if.h  output_pin_proxy_base.h  parameter_configurations.h  pin_value_proxy.h  property_proxy.h  register_value_proxy.h  target_socket_proxy_base.h  test.h  test_exception.h  test_group.h  test_group_base.h  test_group_factory_base.h  (+4 more)
scml-2.1.3/config/src/: Makefile
scml-2.1.3/examples/: Makefile.am  Makefile.in
scml-2.1.3/examples/HWaccelerator/: Makefile.in
scml-2.1.3/examples/Memory/: Makefile.am  Makefile.in
scml-2.1.3/examples/cache/: Makefile.am  Makefile.in
scml-2.1.3/examples/scml2/: Makefile.am  Makefile.in
scml-2.1.3/examples/simple_IPE/: Makefile.in
scml-2.1.3/examples/simple_timer/: Makefile.in
scml-2.1.3/msvc80/: copy_headers.bat  scml2.h  scml2_logging.h  scml2_testing.h
scml-2.1.3/msvc80/scml/: ModelingObjects.sln  ModelingObjects.vcproj  scml2.sln  scml2.vcproj  scml2_logging.sln  scml2_logging.vcproj  scml2_testing.sln  scml2_testing.vcproj  scml2_testing_systemc_main.sln  scml2_testing_systemc_main.vcproj
scml-2.1.3/src/: Makefile.am  Makefile.in
scml-2.1.3/src/ModelingObjects/: Makefile.am  Makefile.in
scml-2.1.3/src/PV/: Makefile.am  Makefile.in  PVCustomReq.h  PVCustomResp.h  tlm_transport_if.h
scml-2.1.3/src/scml2/: Makefile.am  Makefile.in  abstraction_level_switch.cc  abstraction_level_switch.h  abstraction_level_switch_observer.h  autosync_callback.h  bitfield.cc  bitfield_autosync_read_callback.h  bitfield_autosync_write_callback.h  bitfield_base.cc  bitfield_base.h  bitfield_callback_functions.h  bitfield_callback_observers.cc  bitfield_callback_observers.h  bitfield_debug_callback_functions.h  bitfield_debug_mask_read_adapter_tagged.h  bitfield_debug_read_callback_base.h  bitfield_debug_write_adapter_tagged.h  bitfield_debug_write_callback_base.h  bitfield_default_debug_read_callback.h  bitfield_default_debug_write_callback.h  bitfield_default_read_callback.h  bitfield_default_write_callback.h  bitfield_disallow_debug_read_access_callback.cc  bitfield_disallow_debug_write_access_callback.cc  bitfield_disallow_read_access_callback.cc  bitfield_disallow_read_access_callback.h  bitfield_disallow_write_access_callback.cc  bitfield_disallow_write_access_callback.h  bitfield_mask_write_adapter.h  bitfield_mask_write_adapter_tagged.h  bitfield_neversync_read_callback.h  bitfield_null_adapter.h  bitfield_on_write_adapter.h  bitfield_post_write_adapter.h  bitfield_read_adapter.h  bitfield_read_adapter_tagged.h  bitfield_read_callback.h  bitfield_read_callback_base.h  bitfield_selfsync_read_callback.h  (+135 more)
scml-2.1.3/src/scml2_logging/: Makefile.am  Makefile.in  and_match.h  exit_logger.cc  exit_logger.h  logger_base.cc  logger_base.h  name_match.h  registry.cc  registry.h  rule.h  rule_base.h  severity.h  severity_threshold_match.h  stream.h  stream_base.cc  stream_base.h  stream_logger.cc  streambuf.cc  streambuf.h
scml-2.1.3/src/scml2_testing/: Makefile.am  Makefile.in  amba_pv_master_socket_proxy.h  amba_pv_slave_socket_proxy.h  assertion_failed.cc  assertion_failed.h  clock_master_proxy.h  clock_port_proxy.h  equals.h  initiator_socket_proxy_base.cc  input_clock_proxy.h  input_pin_proxy.h  memory_element_value_proxy.cc  memory_if.cc  null_reporter.h  output_pin_proxy.h  parameter_configuration.h  predicate.h  property_server.cc  property_server.h  proxy.h  reporter_if.cc  reporter_if.h  stdout_reporter.cc  stdout_reporter.h  systemc_main.cc  systemc_test_runner.cc  systemc_test_runner.h  target_socket_proxy.h  target_socket_proxy_base.cc  test_base.cc  test_base.h  test_group_base.cc  test_group_factory.h  test_group_factory_base.cc  test_group_registry.cc  test_group_registry.h  test_group_registry_base.cc  test_group_registry_base.h  test_memory.cc  (+3 more)
(+322 files in other folders)
