noinst_LIBRARIES = libscml2.a

H_FILES = \
	abstraction_level_switch_observer.h \
	autosync_callback.h \
	bitfield.h \
	bitfield_autosync_read_callback.h \
	bitfield_autosync_write_callback.h \
	bitfield_base.h \
	bitfield_callback_base.h \
	bitfield_callback_functions.h \
	bitfield_callback_functions_include.h \
	bitfield_callback_observer.h \
	bitfield_callback_observer_owner.h \
	bitfield_callback_observers.h \
	bitfield_debug_callback_base.h \
	bitfield_debug_callback_functions.h \
	bitfield_debug_mask_read_adapter.h \
	bitfield_debug_mask_read_adapter_tagged.h \
	bitfield_debug_mask_write_adapter.h \
	bitfield_debug_mask_write_adapter_tagged.h \
	bitfield_debug_read_adapter.h \
	bitfield_debug_read_adapter_tagged.h \
	bitfield_debug_read_callback.h \
	bitfield_debug_read_callback_base.h \
	bitfield_debug_write_adapter.h \
	bitfield_debug_write_adapter_tagged.h \
	bitfield_debug_write_callback.h \
	bitfield_debug_write_callback_base.h \
	bitfield_default_read_behavior_adapter.h \
	bitfield_default_write_behavior_adapter.h \
	bitfield_disallow_debug_read_access_callback.h \
	bitfield_disallow_debug_write_access_callback.h \
	bitfield_disallow_read_access_callback.h \
	bitfield_disallow_write_access_callback.h \
	bitfield_mask_read_adapter.h \
	bitfield_mask_read_adapter_tagged.h \
	bitfield_mask_write_adapter.h \
	bitfield_mask_write_adapter_tagged.h \
	bitfield_neversync_read_callback.h \
	bitfield_neversync_write_callback.h \
	bitfield_null_adapter.h \
	bitfield_on_write_adapter.h \
	bitfield_post_write_adapter.h \
	bitfield_post_write_adapter_tagged.h \
	bitfield_read_adapter.h \
	bitfield_read_adapter_tagged.h \
	bitfield_read_callback.h \
	bitfield_read_callback_base.h \
	bitfield_selfsync_read_callback.h \
	bitfield_selfsync_write_callback.h \
	bitfield_set_on_read_adapter.h \
	bitfield_store_after_read_adapter.h \
	bitfield_untimed_mask_read_adapter.h \
	bitfield_untimed_mask_read_adapter_tagged.h \
	bitfield_untimed_mask_write_adapter.h \
	bitfield_untimed_mask_write_adapter_tagged.h \
	bitfield_untimed_read_adapter.h \
	bitfield_untimed_read_adapter_tagged.h \
	bitfield_untimed_write_adapter.h \
	bitfield_untimed_write_adapter_tagged.h \
	bitfield_write_adapter.h \
	bitfield_write_adapter_tagged.h \
	bitfield_write_callback.h \
	bitfield_write_callback_base.h \
	bitfield_write_once_adapter.h \
	burst_unroller.h \
	callback_macro.h \
	callback_observer.h \
	callback_observer_owner.h \
	callback_observers.h \
	set_on_read_adapter.h \
	debug_burst_unroller.h \
	debug_callback.h \
	debug_transport_adapter.h \
	debug_transport_adapter_tagged.h \
	default_behavior_adapter.h \
	dmi_handler.h \
	initiator_socket.h \
	severity.h \
	mappable_if.h \
	thread_pool.h \
	mapped_range.h \
	mapped_ranges_observer.h \
	mapped_ranges_observer_owner.h \
	mapped_ranges_observers.h \
	memory.h \
	memory_alias.h \
	memory_base.h \
	memory_behavior_functions.h \
	memory_callback.h \
	memory_callback_base.h \
	memory_callback_functions.h \
	memory_callback_functions_include.h \
	memory_const_iterator.h \
	memory_content_observer.h \
	memory_content_observer_owner.h \
	memory_content_observers.h \
	memory_debug_callback.h \
	memory_debug_callback_base.h \
	memory_debug_callback_functions.h \
	memory_disallow_access_callback.h \
	memory_disallow_debug_access_callback.h \
	memory_dmi.h \
	memory_fast_access.h \
	memory_fast_access_impl.h \
	memory_index_reference.h \
	memory_iterator.h \
	memory_iterator_base.h \
	memory_region.h \
	memory_region_registry.h \
	memory_select_callback_base.h \
	memory_select_callback.h \
	memory_slow_access_base.h \
	neversync_callback.h \
	null_adapter.h \
	on_write_adapter.h \
	pair_signal.h \
	pin_callback.h \
	pin_callback_base.h \
	pin_callback_functions.h \
	pin_callback_tagged.h \
	post_write_adapter.h \
	post_write_adapter_tagged.h \
	quantumkeeper_if.h \
	quantumkeeper_wrapper.h \
	read_adapter.h \
	read_adapter_tagged.h \
	read_extensions_adapter.h \
        read_extensions_adapter_tagged.h \
	reg.h \
	reg_vector_creator.h \
	reset_trigger.h \
	resource.h \
	router.h \
	router_base.h \
	router_callback.h \
	router_callback_base.h \
	router_callback_functions.h \
	router_debug_callback.h \
	router_debug_callback_base.h \
	router_debug_callback_functions.h \
	scoped_reference.h \
	vector.h \
	selfsync_callback.h \
	status.h \
	status_observer.h \
	status_observer_owner.h \
	status_registry.h \
	store_after_read_adapter.h \
	stream.h \
	streams.h \
	symbolic_names.h \
	timing_annotation_registry.h \
	tlm2_gp_extensions.h \
	tlm2_gp_initiator_adapter.h \
	tlm2_gp_target_adapter.h \
	toplevel_memory_base.h \
	transport_adapter.h \
	transport_adapter_tagged.h \
	trigger_signal.h \
	types.h \
	untimed_read_adapter.h \
	untimed_read_adapter_tagged.h \
	untimed_read_extensions_adapter.h \
        untimed_read_extensions_adapter_tagged.h \
	untimed_transport_adapter.h \
	untimed_transport_adapter_tagged.h \
	untimed_word_read_adapter.h \
	untimed_word_read_adapter_tagged.h \
	untimed_word_read_extensions_adapter.h \
        untimed_word_read_extensions_adapter_tagged.h \
	untimed_word_write_adapter.h \
	untimed_word_write_adapter_tagged.h \
	untimed_word_write_extensions_adapter.h \
        untimed_word_write_extensions_adapter_tagged.h \
	untimed_write_adapter.h \
	untimed_write_adapter_tagged.h \
	untimed_write_extensions_adapter.h \
        untimed_write_extensions_adapter_tagged.h \
	utils.h \
	word_access_unroller.h \
	word_access_unroller_base.h \
	word_adapter_base.h \
	word_read_adapter.h \
	word_read_adapter_tagged.h \
	word_read_extensions_adapter.h \
        word_read_extensions_adapter_tagged.h \
	word_write_adapter.h \
	word_write_adapter_tagged.h \
	word_write_extensions_adapter.h \
        word_write_extensions_adapter_tagged.h \
	write_adapter.h \
	write_adapter_tagged.h \
	write_extensions_adapter.h \
       	write_extensions_adapter_tagged.h \
        write_once_adapter.h \
        write_once_state.h


PRIVATE_H_FILES = \
	abstraction_level_switch.h \
	bitfield_default_debug_read_callback.h \
	bitfield_default_debug_write_callback.h \
	bitfield_default_read_callback.h \
	bitfield_default_write_callback.h \
	find_alias.h \
       	memory_bitfields_callback_base.h \
	memory_bitfields_debug_callback_base.h \
	memory_bitfields_debug_read_callback.h \
	memory_bitfields_debug_write_callback.h \
	memory_bitfields_read_callback.h \
	memory_bitfields_write_callback.h \
	memory_default_callback.h \
	memory_default_debug_callback.h \
	memory_heap_storage.h \
	memory_null_callback.h \
	memory_null_debug_callback.h \
	memory_slow_access.h \
	memory_slow_access_content_observer_decorator.h \
	memory_slow_access_storage_decorator.h \
	memory_slow_access_watching_decorator.h \
	memory_storage_base.h \
	memory_storage_creator.h \
	router_null_callback.h \
	router_null_debug_callback.h

noinst_HEADERS = $(H_FILES)

CXX_FILES = \
	abstraction_level_switch.cc \
	bitfield.cc \
	bitfield_base.cc \
	bitfield_callback_observers.cc \
	bitfield_disallow_debug_read_access_callback.cc \
	bitfield_disallow_debug_write_access_callback.cc \
	bitfield_disallow_read_access_callback.cc \
	bitfield_disallow_write_access_callback.cc \
	burst_unroller.cc \
	callback_observers.cc \
	debug_burst_unroller.cc \
	dmi_handler.cc \
	mapped_ranges_observers.cc \
	memory.cc \
	memory_alias.cc \
	memory_base.cc \
	memory_bitfields_callback_base.cc \
	memory_bitfields_debug_callback_base.cc \
	memory_bitfields_debug_read_callback.cc \
	memory_bitfields_debug_write_callback.cc \
	memory_bitfields_read_callback.cc \
	memory_bitfields_write_callback.cc \
	memory_content_observers.cc \
	memory_disallow_access_callback.cc \
	memory_disallow_debug_access_callback.cc \
	memory_dmi.cc \
	memory_heap_storage.cc \
	memory_region.cc \
	memory_region_registry.cc \
	memory_storage_base.cc \
	memory_storage_creator.cc \
	reg.cc \
	reset_trigger.cc \
	router.cc \
	router_base.cc \
	status.cc \
	status_registry.cc \
	symbolic_names.cc \
	timing_annotation_registry.cc \
	toplevel_memory_base.cc \
	word_access_unroller_base.cc \
	word_adapter_base.cc

libscml2_a_SOURCES = $(H_FILES) $(PRIVATE_H_FILES) $(CXX_FILES)

INCLUDES = -I$(srcdir)/.. $(OSCITLM_INC) $(SYSC_INC)

INCLUDE_DIR = $(prefix)/include
LIB_DIR = $(prefix)/lib-$(TARGET_ARCH)

.PHONY: scml2.h
scml2.h:
	@rm -rf $@
	@echo "// Copyright (c) 2011 Synopsys, Inc." > $@
	@echo "// All rights reserved worldwide." >> $@
	@echo "" >> $@
	@echo "#ifndef SCML2_H" >> $@
	@echo "#define SCML2_H" >> $@
	@echo "" >> $@
	@for file in $(noinst_HEADERS) ; do \
	  echo "#include \"scml2/$$file\"" >> $@ ; \
	done
	@echo "" >> $@
	@echo "#endif" >> $@

install-data-local: scml2.h
	@$(NORMAL_INSTALL)
	$(mkinstalldirs) $(INCLUDE_DIR)/scml2
	for file in $(noinst_HEADERS); do \
	  $(INSTALL_DATA) $(srcdir)/$$file $(INCLUDE_DIR)/scml2/$$file; \
	done
	$(INSTALL_DATA) scml2.h $(INCLUDE_DIR)/scml2.h; \
	$(mkinstalldirs) $(LIB_DIR)
	$(INSTALL_DATA) libscml2.a $(LIB_DIR)/libscml2.a
	$(RANLIB) $(LIB_DIR)/libscml2.a

uninstall-local:
	@$(NORMAL_UNINSTALL)
	for file in $(noinst_HEADERS); do \
	  rm -f $(INCLUDE_DIR)/scml2/$$file; \
	done
	-rmdir $(INCLUDE_DIR)/scml2
	rm -f $(LIB_DIR)/libscml2.a
	-rmdir $(prefix)/lib-$(TARGET_ARCH)
